Adds esl_huffman_example2 driver, for reading symbol fq's from input.
esl_mem.c: added esl_mem_strtof() (redundant with esl_memtof(); should
choose between them). Added esl_memstrpfx_case().

Added esl_huffman_utest to testsuite.

--- a/Makefile.in
+++ b/Makefile.in
@@ -320,6 +320,7 @@ EXAMPLES = \
 	esl_histogram_example5\
 	esl_hmm_example\
 	esl_huffman_example\
+	esl_huffman_example2\
 	esl_hyperexp_example\
 	esl_keyhash_example\
 	esl_minimizer_example\
