--- a/configure.ac
+++ b/configure.ac
@@ -206,10 +206,11 @@ AS_IF([test "x$check_threads" != xno],
 
 AC_ARG_ENABLE(gcov,[AS_HELP_STRING([--enable-gcov],[compile for code coverage testing])], enable_gcov=$enableval,  enable_gcov=no)
 AC_ARG_ENABLE(gprof,[AS_HELP_STRING([--enable-gprof],[compile for gcc code profiling])],  enable_gprof=$enableval, enable_gprof=no)
+AC_ARG_ENABLE(sse,[AS_HELP_STRING([--enable-sse],[enable SSE optimizations])] ,           enable_sse=$enableval,   enable_sse=check)
+AC_ARG_ENABLE(neon,[AS_HELP_STRING([--enable-neon],[enable NEON instructions])] ,          enable_neon=$enableval,   enable_neon=check)
+AC_ARG_ENABLE(vmx,[AS_HELP_STRING([--enable-vmx],[enable Altivec/VMX optimizations])],    enable_vmx=$enableval,   enable_vmx=check)
 AC_ARG_WITH(gsl,[AS_HELP_STRING([--with-gsl],[use the GSL, GNU Scientific Library])],     with_gsl=$withval,       with_gsl=no)
 AC_ARG_ENABLE(mpi,[AS_HELP_STRING([--enable-mpi],[enable MPI parallelization])],          enable_mpi=$enableval,   enable_mpi=no)
-AC_ARG_ENABLE(targeting,[AS_HELP_STRING([--enable-targeting],[enable CPU targeted optimizations])],          enable_targeting=$enableval,   enable_targeting=no)
-
 
 
 
@@ -269,7 +270,7 @@ elif test "$enable_gprof" = "yes"; then
    CFLAGS="-O -g -pg"
 elif test "$enable_debugging" != "no"; then
    if test "$GCC" = "yes"; then
-      CFLAGS="-g -Wall -marm"
+      CFLAGS="-g -Wall"
    fi
 else
    CFLAGS="-O3"
@@ -281,6 +282,134 @@ fi
 ESL_PIC_FLAGS
 
 
+# SSE: figure out our @SIMD_CFLAGS@, define HAVE_SSE2
+# The AC_RUN_IFELSE() is there because it's possible to have 
+# hardware that doesn't support SSE2 instructions, yet the
+# compiler can generate them: example AMD Athlons with gcc.
+# So we need to test that an SSE2 program actually runs without
+# generating an "illegal instruction" error. The program
+# here is sufficient [xref J3/127].
+# Note: some platforms (Ubuntu 32-bit for example) absolutely
+# must have the -msse2 cflag on in order to detect a working
+# emmintrin.h, so we set SIMD_CFLAGS before running the test.
+if test "$enable_sse" = "yes" || test "$enable_sse" = "check"; then
+   if test "x$SIMD_CFLAGS" = x; then
+     case $ax_cv_c_compiler_vendor in
+       gnu)   AX_CHECK_COMPILER_FLAGS(-msse2,[SIMD_CFLAGS="-msse2"],[]);;
+       *)     ;;
+     esac   
+   fi
+fi
+if test "$enable_sse" = "check" && test "$enable_vmx" != "yes"; then
+   sre_save_CFLAGS="$CFLAGS"
+   sre_save_CPPFLAGS="$CPPFLAGS"
+   CFLAGS="$CFLAGS $SIMD_CFLAGS"
+   CPPFLAGS="$CPPFLAGS $SIMD_CFLAGS"
+   AC_CHECK_HEADER([emmintrin.h],[
+     AC_MSG_CHECKING([if platform can run SSE/SSE2 instructions])
+     AC_RUN_IFELSE([AC_LANG_PROGRAM( [[#include <emmintrin.h>]],
+		                      [[__m128i v = _mm_set1_epi8(0);]])],
+                   [AC_MSG_RESULT([yes])
+                     enable_sse=yes],
+                   [AC_MSG_RESULT([no])])])
+   CFLAGS="$sre_save_CFLAGS"
+   CPPFLAGS="$sre_save_CPPFLAGS"
+fi
+if test "$enable_sse" = "yes"; then
+   AC_DEFINE(HAVE_SSE2,1,[Support SSE2 (Streaming SIMD Extensions 2) instructions])
+fi
+
+
+# VMX/Altivec (not autodetected yet; must use --enable-vmx to enable)
+if test "$enable_sse" != "yes" && test "$enable_neon" != "yes"; then
+  if test "x$SIMD_CFLAGS" = x; then
+    VMX_SIMD_CFLAGS=""
+    if test "$GCC" = "yes"; then
+       AX_CHECK_COMPILER_FLAGS(-faltivec, [VMX_SIMD_CFLAGS="-faltivec"],
+         [AX_CHECK_COMPILER_FLAGS(-maltivec -mabi=altivec,
+ 	     [VMX_SIMD_CFLAGS="-maltivec -mabi=altivec"],
+             [AX_CHECK_COMPILER_FLAGS(-fvec, [VMX_SIMD_CFLAGS="-fvec"],
+		     [AC_MSG_ERROR([Need a version of gcc with -maltivec])])])])
+    elif test "${ax_cv_c_compiler_vendor}" = "ibm"; then
+       AX_CHECK_COMPILER_FLAGS(-qenablevmx, [VMX_SIMD_CFLAGS="$VMX_SIMD_CFLAGS -qenablevmx"],[])
+       AX_CHECK_COMPILER_FLAGS(-qaltivec,   [VMX_SIMD_CFLAGS="$VMX_SIMD_CFLAGS -qaltivec"],[])
+    else
+       AX_CHECK_COMPILER_FLAGS(-faltivec, [VMX_SIMD_CFLAGS="-faltivec"],[])
+    fi
+  else
+    VMX_SIMD_CFLAGS="$SIMD_CFLAGS"
+  fi
+  if test "$enable_vmx" = "check"; then
+     sre_save_cflags="$CFLAGS"
+     CFLAGS="$CFLAGS $VMX_SIMD_CFLAGS"
+     AC_MSG_CHECKING([if platform can run Altivec/VMX instructions])
+     AC_RUN_IFELSE([AC_LANG_PROGRAM( [[#include <altivec.h>]],
+   	 			   [[vector unsigned char zerov;
+                                     vector unsigned char onev;
+                                     zerov = vec_splat_u8(0);
+                                     onev = vec_splat_u8(1);
+                                     onev = vec_adds(onev, zerov);
+				   ]])],
+                     [AC_MSG_RESULT([yes])
+                       enable_vmx=yes],
+                     [AC_MSG_RESULT([no])
+                        if test "${ax_cv_c_compiler_vendor}" = "ibm"; then
+                           echo "******************************************************"
+                           echo "*  You seem to have the IBM  C compiler.  If your    *"
+                           echo "*  processor supports vector instructions it is      *"
+                           echo "*  possible specifying an architecture would enable  *"
+                           echo "*  vector support, i.e.                              *"
+                           echo "*                                                    *"
+                           echo "*    --with-xlc-arch=XXX                             *"
+                           echo "*                                                    *"
+                           echo "*  where XXX is pwr6, auto or whatever kind of CPU   *"
+                           echo "*  you have.                                         *"
+                           echo "******************************************************"
+                        fi
+                   ])
+     CFLAGS="$sre_save_cflags"
+  fi
+  if test "$enable_vmx" = "yes"; then
+    SIMD_CFLAGS="$VMX_SIMD_CFLAGS"
+    AC_DEFINE(HAVE_VMX,1,[Support Altivec/VMX vector instructions])
+  fi
+fi
+
+
+
+
+
+# ARM and NEON SIMD flags
+if test "$enable_neon" = "yes" || test "$enable_neon" = "check"; then
+   if test "x$SIMD_CFLAGS" = x; then
+     case $ax_cv_c_compiler_vendor in
+       gnu)   AX_CHECK_COMPILER_FLAGS(-mfpu=neon,[SIMD_CFLAGS="-mfpu=neon"],[]);;
+       *)     ;;
+     esac   
+   fi
+fi
+if test "$enable_neon" = "check" && test "$enable_sse" != "yes" && test "$enable_vmx" != "yes"; then
+   sre_save_CFLAGS="$CFLAGS"
+   sre_save_CPPFLAGS="$CPPFLAGS"
+   CFLAGS="$CFLAGS $SIMD_CFLAGS"
+   CPPFLAGS="$CPPFLAGS $SIMD_CFLAGS"
+   AC_CHECK_HEADER([arm_neon.h],[
+     AC_MSG_CHECKING([if platform can run NEON instructions])
+     AC_RUN_IFELSE([AC_LANG_PROGRAM( [[#include <arm_neon.h>]],
+		                      [[ int32x4_t x = vdupq_n_s32(0);]])],
+                   [AC_MSG_RESULT([yes])
+                     enable_neon=yes],
+                   [AC_MSG_RESULT([no])])])
+   CFLAGS="$sre_save_CFLAGS"
+   CPPFLAGS="$sre_save_CPPFLAGS"
+fi
+if test "$enable_neon" = "yes"; then
+   AC_DEFINE(HAVE_NEON,1,[Support NEON instructions])
+fi
+
+
+
+
 # NEON: Check for NEON compiler flag
 # todo: we can always check for other ARM floating point flags later
 #if test "$enable_neon" = "yes" || test "$enable_neon" = "check"; then
@@ -289,7 +418,7 @@ ESL_PIC_FLAGS
 # cominations of NEON/VFP compiler options. This allows 
 # us to determine the best compile options for each 
 # ARM architecture. 
-if test "$enable_targeting" = "yes"; then
+if test "$enable_neon" = "yes"; then
   cortex_a5="-mfpu=neon-fp16"
   cortex_a7="-mfpu=neon-vfpv4"
   cortex_a8="-mfpu=neon"
@@ -298,26 +427,26 @@ if test "$enable_targeting" = "yes"; then
   sre_save_CFLAGS="$CFLAGS"
   sre_save_CPPFLAGS="$CPPFLAGS"
   CFLAGS="$CFLAGS $cortex_a5"
-  CPPFLAGS="$CPPFLAGS $cortex_a5"     
+  CPPFLAGS="$CPPFLAGS $cortex_a5"
   AC_RUN_IFELSE([AC_LANG_PROGRAM( [[]],[[int a = 32;]])],
                     [vector_flags="-mcpu=cortex-a5 -mfpu=neon-fp16"], [])
-  CFLAGS="$sre_save_CFLAGS $cortex_a7"  
+  CFLAGS="$sre_save_CFLAGS $cortex_a7"
   CPPFLAGS="$sre_save_CPPFLAGS $cortex_a7"
   AC_RUN_IFELSE([AC_LANG_PROGRAM( [[]],[[int a = 32;]])],
                     [vector_flags="-mcpu=cortex-a7 -mfpu=neon-vfpv4"], [])
-  CFLAGS="$sre_save_CFLAGS $cortex_a8"  
+  CFLAGS="$sre_save_CFLAGS $cortex_a8"
   CPPFLAGS="$sre_save_CPPFLAGS $cortex_a8"
   AC_RUN_IFELSE([AC_LANG_PROGRAM( [[]],[[int a = 32;]])],
                     [vector_flags="-mcpu=cortex-a8 -mfpu=neon"], [])
-  CFLAGS="$sre_save_CFLAGS $cortex_a9"  
+  CFLAGS="$sre_save_CFLAGS $cortex_a9"
   CPPFLAGS="$sre_save_CPPFLAGS $cortex_a9"
   AC_RUN_IFELSE([AC_LANG_PROGRAM( [[]],[[int a = 32;]])],
                     [vector_flags="-mcpu=cortex-a9 -mfpu=neon-fp16"], [])
-  CFLAGS="$sre_save_CFLAGS $cortex_a15"  
+  CFLAGS="$sre_save_CFLAGS $cortex_a15"
   CPPFLAGS="$sre_save_CPPFLAGS $cortex_a15"
   AC_RUN_IFELSE([AC_LANG_PROGRAM( [[]],[[int a = 32;]])],
                     [vector_flags="-mcpu=cortex-a15 -mfpu=neon-vfpv4"], [])
-  
+
   CFLAGS="$sre_save_CFLAGS"
   CPPFLAGS="$sre_save_CPPFLAGS"
 
@@ -326,19 +455,20 @@ else
      case $ax_cv_c_compiler_vendor in
        gnu)   AX_CHECK_COMPILER_FLAGS(-mfpu=neon,[SIMD_CFLAGS="-mfpu=neon"],
                [AC_MSG_ERROR([no NEON hardware detected])]);;
-       *)     ;;   
+       *)     ;;
        esac
    fi
 fi
 
-if test "y$vector_flags" != y; then
-  CFLAGS="$CFLAGS $vector_flags"
-  CPPFLAGS="$CPPFLAGS $vector_flags"
+if test "y$vector_flags" != "y"; then
+  SIMD_CFLAGS="$vector_flags"
 fi
-# Probably don't need this anymore, remove soon? 
-#if test "$enable_neon" = "yes"; then
-#  AC_DEFINE(HAVE_NEON,1,[Support NEON (ARM Advanced SIMD extension) instructions])
-#fi
+
+
+
+
+
+
 
 AC_SUBST(SIMD_CFLAGS)
 
