Incorporates changes after review of Tyler's ARM branch pull request.
Typedefs __arm128i (etc) renamed to esl_neon_128i_t (etc), to avoid
having variables that start with __ (reserved for system/compiler),
and to follow easel conventions.

Contents of arm_vector.h moved to esl_neon.h, and arm_vector.h
removed: to follow Easel file naming conventions.

Changed Incept: lines from SRE (copy/paste from esl_sse) to "Tyler
Camp, summer 2016".

In esl_neon_rightshift_float(), union tmp appears extraneous; removed it.

To make __attribute__((format())) portable (compile-time checking of
printf-formatted varargs by gcc-compatible compilers): added
AX_GCC_FUNC_ATTRIBUTE test in configure.ac, setting
HAVE_FUNC_ATTRIBUTE_FORMAT; added ESL_ATTRIBUTE_FORMAT() macro which
generates the __attribute__ declaration (if compiler supports it) or
no-ops otherwise. Cleaned up __noreturn__ attribute that we were
already using it, renamed to ESL_ATTRIBUTE_NORETURN for consistency.

Updated list of contributors in LICENSE, including Tyler and Nick.

In the dummy code at end of esl_neon.c (when HAVE_NEON is false),
changed esl_sse_DoAbsolutelyNothing() to esl_neon_DoAbsolutelyNothing().

--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -92,8 +92,9 @@
 #undef HAVE_TIMES
 #undef HAVE_ERFC
 
-#undef HAVE_FUNC_ATTRIBUTE_NORETURN // Compiler supports __attribute__ tag, which we use to help w/ clang static analysis.
-
+#undef HAVE_FUNC_ATTRIBUTE_NORETURN // Compiler supports __attribute__((__noreturn__)), helps w/ clang static analysis.
+#undef HAVE_FUNC_ATTRIBUTE_FORMAT   // Compiler supports __attribute__((format(a,b,c))), typechecking printf-like functions
+ 
 /* Function behavior */
 #define eslSTOPWATCH_HIGHRES
 
