Accompanies incorp of H3 pull request, Solaris compatibility (Jaenicke)
esl_strsep() added, based on FreeBSD code, provided by Sebastien J If
strsep() is not available, this function is compiled in, and strsep is
defined to esl_strsep. configure.ac checks for strsep(), defining
HAVE_STRSEP.

Use AC_SEARCH_LIBS, not AC_CHECK_LIB to check need for -lsocket,
-lnsl.  Looks like gnu autoconf maintainers discourage use of
AC_CHECK_LIB.

--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -77,20 +77,21 @@
 #undef HAVE_GZIP
 
 /* Functions */
-#undef HAVE_CHMOD
-#undef HAVE_FSEEKO
-#undef HAVE_FSTAT
-#undef HAVE_GETCWD
-#undef HAVE_GETPID
 #undef HAVE_MKSTEMP
 #undef HAVE_POPEN
 #undef HAVE_PUTENV
-#undef HAVE_STAT
 #undef HAVE_STRCASECMP
-#undef HAVE_SYSCONF
-#undef HAVE_SYSCTL
+#undef HAVE_STRSEP
 #undef HAVE_TIMES
+#undef HAVE_GETPID
+#undef HAVE_SYSCTL
+#undef HAVE_SYSCONF
+#undef HAVE_GETCWD
+#undef HAVE_CHMOD
+#undef HAVE_STAT
+#undef HAVE_FSTAT
 #undef HAVE_ERFC
+#undef HAVE_FSEEKO
 
 #undef HAVE_FUNC_ATTRIBUTE_NORETURN // Compiler supports __attribute__((__noreturn__)), helps w/ clang static analysis.
 #undef HAVE_FUNC_ATTRIBUTE_FORMAT   // Compiler supports __attribute__((format(a,b,c))), typechecking printf-like functions
