--- a/Makefile.in
+++ b/Makefile.in
@@ -11,7 +11,6 @@
 #
 # For more information, see the Installation chapter of the Easel Guide.
 #
-
 # VPATH and shell configuration
 #
 top_srcdir = @top_srcdir@
@@ -49,7 +48,10 @@ man1ext     = .1
 #
 CC       = @CC@
 CFLAGS   = @CFLAGS@ @PTHREAD_CFLAGS@ @PIC_FLAGS@
-SIMDFLAGS= @SIMD_CFLAGS@
+#SIMDFLAGS= @SIMD_CFLAGS@
+SSEFLAGS    =  @SSE_CFLAGS@
+AVXFLAGS = @AVX_CFLAGS@
+AVX512FLAGS = @AVX512_CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS  = @LDFLAGS@
 LIBGSL   = @LIBGSL@
@@ -80,6 +82,8 @@ endif
 #
 HDRS = 	easel.h\
 	esl_alphabet.h\
+	esl_avx.h\
+	esl_avx_512.h\
 	esl_buffer.h\
 	esl_cluster.h\
 	esl_composition.h\
@@ -119,8 +123,8 @@ HDRS = 	easel.h\
 	esl_msaweight.h\
 	esl_neon.h\
 	esl_normal.h\
-	esl_paml.h\
 	esl_quicksort.h\
+	esl_paml.h\
 	esl_random.h\
 	esl_randomseq.h\
 	esl_ratematrix.h\
@@ -128,11 +132,11 @@ HDRS = 	easel.h\
 	esl_regexp.h\
 	esl_rootfinder.h\
 	esl_scorematrix.h\
-	esl_sse.h\
 	esl_sq.h\
 	esl_sqio.h\
 	esl_sqio_ascii.h\
 	esl_sqio_ncbi.h\
+	esl_sse.h\
 	esl_ssi.h\
 	esl_stack.h\
 	esl_stats.h\
@@ -200,7 +204,6 @@ OBJS =	easel.o\
 	esl_sqio.o\
 	esl_sqio_ascii.o\
 	esl_sqio_ncbi.o\
-	esl_sse.o\
 	esl_ssi.o\
 	esl_stack.o\
 	esl_stats.o\
@@ -213,14 +216,17 @@ OBJS =	easel.o\
 	esl_weibull.o\
 	esl_workqueue.o\
 	esl_wuss.o
-
 #	esl_swat.o
 
+SSE_OBJS=	esl_sse.o
+AVX_OBJS = esl_avx.o
+AVX512_OBJS = esl_avx_512.o
 
 BENCHMARKS =\
 	esl_buffer_benchmark\
 	esl_keyhash_benchmark\
 	esl_mem_benchmark\
+	esl_sse_benchmark\
 	esl_random_benchmark
 
 EXPERIMENTS = \
@@ -290,9 +296,9 @@ UTESTS =\
 #	swat_utest\
 
 EXAMPLES = \
-	easel_example\
-	esl_alphabet_example\
-	esl_alphabet_example2\
+        easel_example\
+        esl_alphabet_example\
+        esl_alphabet_example2\
 	esl_alphabet_example3\
 	esl_buffer_example\
 	esl_buffer_example2\
@@ -300,34 +306,32 @@ EXAMPLES = \
 	esl_buffer_example4\
 	esl_buffer_example5\
 	esl_buffer_example6\
-	esl_cluster_example\
-	esl_dirichlet_example\
-	esl_dmatrix_example\
-	esl_dsqdata_example\
-	esl_dsqdata_example2\
-	esl_exponential_example\
-	esl_fileparser_example\
-	esl_fileparser_example2\
-	esl_gamma_example\
+        esl_cluster_example\
+        esl_dirichlet_example\
+        esl_dmatrix_example\
+        esl_dsqdata_example\
+        esl_dsqdata_example2\
+        esl_exponential_example\
+        esl_fileparser_example\
+        esl_fileparser_example2\
+        esl_gamma_example\
 	esl_gencode_example\
 	esl_gencode_example2\
-	esl_getopts_example\
-	esl_getopts_example2\
-	esl_gev_example\
-	esl_gumbel_example\
-	esl_histogram_example\
-	esl_histogram_example2\
-	esl_histogram_example3\
-	esl_histogram_example4\
-	esl_histogram_example5\
-	esl_hmm_example\
-	esl_huffman_example\
-	esl_huffman_example2\
-	esl_hyperexp_example\
-	esl_keyhash_example\
-	esl_minimizer_example\
-	esl_mixgev_example\
-	esl_msafile_example\
+        esl_getopts_example\
+        esl_getopts_example2\
+        esl_gev_example\
+        esl_gumbel_example\
+        esl_histogram_example\
+        esl_histogram_example2\
+        esl_histogram_example3\
+        esl_histogram_example4\
+        esl_histogram_example5\
+        esl_hmm_example\
+        esl_hyperexp_example\
+        esl_keyhash_example\
+        esl_minimizer_example\
+        esl_mixgev_example\
+        esl_msafile_example\
 	esl_msafile_a2m_example\
 	esl_msafile_a2m_example2\
 	esl_msafile_afa_example\
@@ -345,9 +349,7 @@ EXAMPLES = \
         esl_msacluster_example\
         esl_msashuffle_example\
         esl_msaweight_example\
-	esl_neon_example\
         esl_normal_example\
-	esl_quicksort_example\
         esl_random_example\
 	esl_regexp_example\
 	esl_regexp_example2\
@@ -360,7 +362,7 @@ EXAMPLES = \
         esl_sqio_example\
         esl_sqio_example2\
         esl_sqio_example3\
-	esl_sse_example\
+        esl_sse_example\
         esl_ssi_example\
         esl_ssi_example2\
         esl_stack_example\
@@ -400,13 +402,19 @@ check:  ${UTESTS} .FORCE
 pdf:
 	${QUIET_SUBDIR0}documentation ${QUIET_SUBDIR1} pdf
 
-libeasel.a:  ${OBJS}
-	${QUIET_AR}${AR} -r libeasel.a $(OBJS) > /dev/null 2>&1
+libeasel.a:  ${OBJS} ${SSE_OBJS} ${AVX_OBJS} ${AVX512_OBJS}
+	${QUIET_AR}${AR} -r libeasel.a $(OBJS) $(SSE_OBJS) $(AVX_OBJS) $(AVX512_OBJS) > /dev/null 2>&1
 	@${RANLIB} libeasel.a
 
 .FORCE:
 
 ${OBJS}: ${HDRS} esl_config.h
+${SSE_OBJS}: ${HDRS} esl_config.h
+${AVX_OBJS}: ${HDRS} esl_config.h
+${AVX512_OBJS}: ${HDRS} esl_config.h
+${SSE_OBJS}:  SIMDFLAGS:= $(SSEFLAGS)
+${AVX_OBJS}:  SIMDFLAGS:= $(AVXFLAGS)
+${AVX512_OBJS}:  SIMDFLAGS:= $(AVX512FLAGS)
 
 .c.o:
 	${QUIET_CC}${CC} -I. -I${srcdir} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -o $@ -c $<
@@ -520,7 +528,7 @@ ifneq (,$(wildcard ./documentation/.))
 endif
 	${QUIET_SUBDIR0}testsuite     ${QUIET_SUBDIR1} clean
 	${QUIET_SUBDIR0}miniapps      ${QUIET_SUBDIR1} clean
-	-rm -f ${OBJS} libeasel.a
+	-rm -f ${OBJS} ${SSE_OBJS} ${AVX_OBJS} ${AVX512_OBJS} libeasel.a
 	-rm -f ${UTESTS} ${BENCHMARKS} ${EXAMPLES} ${EXPERIMENTS}
 	-rm -f *~ TAGS
 	-rm -f *.gcno *.gcda *.gcov
