--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -35,7 +35,7 @@ INSTALL     = @INSTALL@
 #
 CC        = @CC@
 CFLAGS    = @CFLAGS@ @PTHREAD_CFLAGS@ @PIC_FLAGS@
-SIMDFLAGS = @SIMD_CFLAGS@
+#SIMDFLAGS = @SIMD_CFLAGS@
 CPPFLAGS  = @CPPFLAGS@
 LDFLAGS   = @LDFLAGS@
 DEFS      = @DEFS@
