--- a/Makefile.in
+++ b/Makefile.in
@@ -18,6 +18,8 @@ srcdir     = @srcdir@
 VPATH      = @srcdir@
 SHELL      = /bin/sh
 
+#define V = 1
+
 # Package information
 #
 PACKAGE         = @PACKAGE_NAME@
@@ -52,6 +54,7 @@ CFLAGS   = @CFLAGS@ @PTHREAD_CFLAGS@ @PIC_FLAGS@
 SSEFLAGS    =  @SSE_CFLAGS@
 AVXFLAGS = @AVX_CFLAGS@
 AVX512FLAGS = @AVX512_CFLAGS@
+ARMFLAGS = @ARM_CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS  = @LDFLAGS@
 LIBGSL   = @LIBGSL@
@@ -189,7 +192,6 @@ OBJS =	easel.o\
 	esl_msafile_stockholm.o\
 	esl_msashuffle.o\
 	esl_msaweight.o\
-	esl_neon.o\
 	esl_normal.o\
 	esl_paml.o\
 	esl_quicksort.o\
@@ -221,6 +223,7 @@ OBJS =	easel.o\
 SSE_OBJS=	esl_sse.o
 AVX_OBJS = esl_avx.o
 AVX512_OBJS = esl_avx_512.o
+ARM_OBJS = esl_neon.o
 
 BENCHMARKS =\
 	esl_buffer_benchmark\
@@ -266,7 +269,6 @@ UTESTS =\
 	esl_msafile_selex_utest\
 	esl_msafile_stockholm_utest\
 	esl_msaweight_utest\
-	esl_neon_utest\
 	esl_normal_utest\
 	esl_quicksort_utest\
 	esl_random_utest\
@@ -294,6 +296,9 @@ UTESTS =\
 #	paml_utest\
 #	stopwatch_utest\
 #	swat_utest\
+
+NEON_UTESTS = \
+	esl_neon_utest
 
 EXAMPLES = \
         easel_example\
@@ -389,21 +394,21 @@ EXAMPLES = \
 all:    libeasel.a .FORCE
 	${QUIET_SUBDIR0}miniapps  ${QUIET_SUBDIR1} all
 
-dev:    libeasel.a ${UTESTS} ${BENCHMARKS} ${EXPERIMENTS} ${EXAMPLES} .FORCE
+dev:    libeasel.a ${NEON_UTESTS} ${UTESTS} ${BENCHMARKS} ${EXPERIMENTS} ${EXAMPLES} .FORCE
 	${QUIET_SUBDIR0}miniapps  ${QUIET_SUBDIR1} dev
 
-tests:  ${UTESTS}
+tests:  ${UTESTS} ${NEON_UTESTS}
 	${QUIET_SUBDIR0}miniapps ${QUIET_SUBDIR1} tests
 
-check:  ${UTESTS} .FORCE
+check:  ${UTESTS} ${NEON_UTESTS} .FORCE
 	${QUIET_SUBDIR0}miniapps  ${QUIET_SUBDIR1} check
 	${QUIET_SUBDIR0}testsuite ${QUIET_SUBDIR1} check
 
 pdf:
 	${QUIET_SUBDIR0}documentation ${QUIET_SUBDIR1} pdf
 
-libeasel.a:  ${OBJS} ${SSE_OBJS} ${AVX_OBJS} ${AVX512_OBJS}
-	${QUIET_AR}${AR} -r libeasel.a $(OBJS) $(SSE_OBJS) $(AVX_OBJS) $(AVX512_OBJS) > /dev/null 2>&1
+libeasel.a:  ${OBJS} ${SSE_OBJS} ${AVX_OBJS} ${AVX512_OBJS} ${ARM_OBJS}
+	${QUIET_AR}${AR} -r libeasel.a $(OBJS) $(SSE_OBJS) $(AVX_OBJS) $(AVX512_OBJS) $(ARM_OBJS) > /dev/null 2>&1
 	@${RANLIB} libeasel.a
 
 .FORCE:
@@ -412,10 +417,11 @@ ${OBJS}: ${HDRS} esl_config.h
 ${SSE_OBJS}: ${HDRS} esl_config.h
 ${AVX_OBJS}: ${HDRS} esl_config.h
 ${AVX512_OBJS}: ${HDRS} esl_config.h
+${ARM_OBJS}: ${HDRS} esl_config.h
 ${SSE_OBJS}:  SIMDFLAGS:= $(SSEFLAGS)
 ${AVX_OBJS}:  SIMDFLAGS:= $(AVXFLAGS)
 ${AVX512_OBJS}:  SIMDFLAGS:= $(AVX512FLAGS)
-
+${ARM_OBJS}: SIMDFLAGS := ${ARMFLAGS}
 .c.o:
 	${QUIET_CC}${CC} -I. -I${srcdir} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -o $@ -c $<
 
@@ -439,10 +445,29 @@ ${UTESTS}:  libeasel.a
 	   else DFILE=${srcdir}/esl_$${BASENAME}.c ;\
         fi;\
 	if test ${V} ;\
-	   then echo "${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}" ;\
+	   then echo "${CC} ${CFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}" ;\
 	   else echo '    ' GEN $@ ;\
 	fi ;\
-	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}
+	${CC} ${CFLAGS} ${ARMFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}
+
+
+
+
+${NEON_UTESTS}:  libeasel.a
+	@BASENAME=`echo $@ | sed -e 's/_utest//'| sed -e 's/^esl_//'` ;\
+	DFLAG=`echo $${BASENAME} | sed -e 'y/abcdefghijklmnopqrstuvwxyz/ABCDEFGHIJKLMNOPQRSTUVWXYZ/'`;\
+	DFLAG=esl$${DFLAG}_TESTDRIVE ;\
+	if test $@ = "easel_utest" ;\
+           then DFILE=${srcdir}/easel.c ;\
+	   else DFILE=${srcdir}/esl_$${BASENAME}.c ;\
+        fi;\
+	if test ${V} ;\
+	   then echo "${CC} ${CFLAGS} ${ARMFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}" ;\
+	   else echo '    ' GEN $@ ;\
+	fi ;\
+	${CC} ${CFLAGS} ${ARMFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}
+
+
 
 # Benchmark compilation:
 # Name construction much like unit tests.
@@ -528,15 +553,15 @@ ifneq (,$(wildcard ./documentation/.))
 endif
 	${QUIET_SUBDIR0}testsuite     ${QUIET_SUBDIR1} clean
 	${QUIET_SUBDIR0}miniapps      ${QUIET_SUBDIR1} clean
-	-rm -f ${OBJS} ${SSE_OBJS} ${AVX_OBJS} ${AVX512_OBJS} libeasel.a
-	-rm -f ${UTESTS} ${BENCHMARKS} ${EXAMPLES} ${EXPERIMENTS}
+	-rm -f ${OBJS} ${SSE_OBJS} ${AVX_OBJS} ${AVX512_OBJS} ${ARM_OBJS} libeasel.a
+	-rm -f ${UTESTS} ${NEON_UTESTS} ${BENCHMARKS} ${EXAMPLES} ${EXPERIMENTS}
 	-rm -f *~ TAGS
 	-rm -f *.gcno *.gcda *.gcov
 	-rm -f cscope.out
 	-rm -f core.[0-9]*
 	-rm -f esltmp??????
 	-rm -f config.log config.status
-	for prog in ${UTESTS} ${BENCHMARKS} ${EXAMPLES} ${EXPERIMENTS}; do\
+	for prog in ${UTESTS} ${NEON_UTESTS} ${BENCHMARKS} ${EXAMPLES} ${EXPERIMENTS}; do\
 	   if test -d $$prog.dSYM; then rm -rf $$prog.dSYM; fi;\
 	done
 
