changing one option to match changes to ARM code

--- a/Makefile.in
+++ b/Makefile.in
@@ -54,7 +54,7 @@ CFLAGS   = @CFLAGS@ @PTHREAD_CFLAGS@ @PIC_FLAGS@
 SSEFLAGS    =  @SSE_CFLAGS@
 AVXFLAGS = @AVX_CFLAGS@
 AVX512FLAGS = @AVX512_CFLAGS@
-ARMFLAGS = @ARM_CFLAGS@
+ARMFLAGS = @NEON_CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS  = @LDFLAGS@
 LIBGSL   = @LIBGSL@
