tests pass on ARM v7, pushing in order to test on other machines

--- a/Makefile.in
+++ b/Makefile.in
@@ -225,7 +225,8 @@ OBJS =	easel.o\
 SSE_OBJS=	esl_sse.o
 AVX_OBJS = esl_avx.o
 AVX512_OBJS = esl_avx_512.o
-ARM_OBJS = esl_neon.o esl_neon64.o
+ARM_OBJS = esl_neon.o
+ARM64_OBJS = esl_neon64.o
 
 BENCHMARKS =\
 	esl_buffer_benchmark\
@@ -420,10 +421,13 @@ ${SSE_OBJS}: ${HDRS} esl_config.h
 ${AVX_OBJS}: ${HDRS} esl_config.h
 ${AVX512_OBJS}: ${HDRS} esl_config.h
 ${ARM_OBJS}: ${HDRS} esl_config.h
+${ARM64_OBJS}: ${HDRS} esl_config.h
 ${SSE_OBJS}:  SIMDFLAGS:= $(SSEFLAGS)
 ${AVX_OBJS}:  SIMDFLAGS:= $(AVXFLAGS)
 ${AVX512_OBJS}:  SIMDFLAGS:= $(AVX512FLAGS)
-${ARM_OBJS}: SIMDFLAGS := ${ARMFLAGS}
+${ARM_OBJS}: SIMDFLAGS := $(NEONFLAGS)
+${ARM64_OBJS}: SIMDFLAGS := $(NEON64FLAGS)
+
 .c.o:
 	${QUIET_CC}${CC} -I. -I${srcdir} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -o $@ -c $<
 
@@ -467,7 +471,7 @@ ${NEON_UTESTS}:  libeasel.a
 	   then echo "${CC} ${CFLAGS} ${ARMFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}" ;\
 	   else echo '    ' GEN $@ ;\
 	fi ;\
-	${CC} ${CFLAGS} ${ARMFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}
+	${CC} ${CFLAGS} ${NEONFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I. -I${srcdir} -L. -D$${DFLAG} $${DFILE} -leasel -lm ${LIBS}
 
 
 
