--- a/Makefile.in
+++ b/Makefile.in
@@ -334,6 +334,7 @@ EXAMPLES = \
         esl_histogram_example4\
         esl_histogram_example5\
         esl_hmm_example\
+	esl_huffman_example\
         esl_hyperexp_example\
         esl_keyhash_example\
         esl_minimizer_example\
