--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -34,8 +34,7 @@ INSTALL     = @INSTALL@
 ## your compiler and compiler flags.
 #
 CC        = @CC@
-CFLAGS    = @CFLAGS@ @PTHREAD_CFLAGS@ @PIC_FLAGS@
-#SIMDFLAGS = @SIMD_CFLAGS@
+CFLAGS    = @CFLAGS@ @PTHREAD_CFLAGS@ 
 CPPFLAGS  = @CPPFLAGS@
 LDFLAGS   = @LDFLAGS@
 DEFS      = @DEFS@
@@ -67,32 +66,6 @@ PROGS = esl-afetch\
         esl-translate\
 	esl-weight
 
-PROGOBJS =\
-	esl-afetch.o\
-	esl-alimanip.o\
-	esl-alimap.o\
-	esl-alimask.o\
-	esl-alimerge.o\
-	esl-alipid.o\
-	esl-alirev.o\
-	esl-alistat.o\
-	esl-cluster.o\
-	esl-compalign.o\
-	esl-compstruct.o\
-	esl-construct.o\
-	esl-histplot.o\
-	esl-mask.o\
-	esl-reformat.o\
-	esl-selectn.o\
-	esl-seqrange.o\
-	esl-seqstat.o\
-	esl-sfetch.o\
-	esl-shuffle.o\
-	esl-ssdraw.o\
-        esl-translate.o\
-	esl-weight.o
-
-
 # beautification magic stolen from git 
 #
 QUIET_SUBDIR0 = +${MAKE} -C #space separator after -c
@@ -114,13 +87,8 @@ dev:    ${PROGS}
 tests:  ${PROGS}
 check:  ${PROGS}
 
-${PROGS}: @EXEC_DEPENDENCY@ ../libeasel.a 
-	${QUIET_GEN}${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} ${LDFLAGS} -L.. -o $@ $@.o ${LIBS}
-
-${PROGOBJS}: ../libeasel.a 
-
-.c.o: ../libeasel.a 
-	${QUIET_CC}${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -I. -I.. -I${srcdir} -I${srcdir}/.. -o $@ -c $<
+${PROGS}: % : %.c ../libeasel.a 
+	${QUIET_GEN}${CC} ${CFLAGS} ${DEFS} ${LDFLAGS} -L.. -I. -I.. -I${srcdir} -I${srcdir}/.. -o $@ $< ${LIBS}
 
 install:
 	for file in ${PROGS}; do \
@@ -147,6 +115,3 @@ distclean: clean
 	-rm Makefile
 
 
-################################################################
-# @LICENSE@
-################################################################
